config/kustomize-ext/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      deployment: person-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: person-service
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/book-dev/person-service:latest
          imagePullPolicy: IfNotPresent
          name: person-service
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
